ADD: kata 7 solved